...
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bya-KX-6Kc">
                                <rect key="frame" x="35" y="393" width="303" height="45"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.23799481989999999" green="0.65745598080000001" blue="0.98527747389999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Already Registered? SIGN IN">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                    <color key="titleShadowColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                </state>
                                <connections>
                                    <action selector="signInButton:" destination="tCf-nL-TZs" eventType="touchUpInside" id="2xE-27-ZD9"/>
                                </connections>
...
                                    <color key="titleColor" red="0.234775871" green="0.25059288740000002" blue="0.25793066619999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="cancelButtonClicked:" destination="pAH-Yw-m34" eventType="touchUpInside" id="dsx-Yv-M98"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jCM-6c-Brq" customClass="MessageLineLabel">
                                <rect key="frame" x="30" y="270" width="315" height="20"/>
                                <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
                                <color key="textColor" red="0.64445029149999999" green="0.64445029149999999" blue="0.64445029149999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u8j-dB-wjn" customClass="MessageLineLabel">
...
                                                                <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
                                                                <connections>
                                                                    <outlet property="delegate" destination="dke-1h-9Qj" id="07W-eY-Tat"/>
                                                                </connections>
                                                            </textField>
                                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pfr-pL-JJs">
                                                                <rect key="frame" x="22" y="53" width="288" height="45"/>
                                                                <color key="textColor" red="0.234775871" green="0.25059288740000002" blue="0.25793066619999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                                                                <connections>
                                                                    <outlet property="delegate" destination="dke-1h-9Qj" id="87w-WH-JAq"/>
...
                                                </constraints>
                                            </view>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Jo-1v-Cdi">
                                                <rect key="frame" x="22.5" y="458.5" width="330" height="45"/>
                                                <color key="backgroundColor" red="0.003777475795" green="0.65594881770000002" blue="0.99662441020000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <state key="normal" title="Sign In">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <connections>
                                                    <action selector="signInButtonClicked:" destination="dke-1h-9Qj" eventType="touchUpInside" id="Xrd-59-kKe"/>
                                                </connections>
                                            </button>
...
