...
    [_estimatedTimeButton setTitle:_estimatedDateString forState:UIControlStateNormal];
}

-(void) showAlertWithMessage : (NSString *) message
{
    UIAlertController *alertController = [UIAlertController alertControllerWithTitle:@"" message:message preferredStyle:UIAlertControllerStyleAlert];
    [alertController addAction:[UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleDefault handler:nil]];
    [self presentViewController:alertController animated:YES completion:nil];
}

#pragma mark - UIButton Actions

- (IBAction)previousButtonClicked:(id)sender {
...
